--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: left;
+  margin: 5px;
 }
 
 .App-logo {
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  list-style-type: none;
+  width: 50%;
+}
+
+ul li {
+  border: solid #a3a3a3 1px;
+  margin: 5px;
+  padding-left: 5px;
 }
